# reqifio

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  reqif.sql
examples/: indent.py  indent_example.py  refines_example.py
src/reqifio/: __init__.py  cli.py  command.py  csv_adapter.py  model.py  reqif_parser.py  reqif_writer.py  sqlite_adapter.py
tests/: test_commands.py  test_csv_adapter.py  test_relations.py  test_reqif.py  test_reqifio.py  test_reqifio_samples.py  test_samples.py  test_spec_hierarchy.py  test_sqlite_adapter.py
tests/samples/: reqif_testfile.reqif
